--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
+    - name: Checkout
+      uses: actions/checkout@v3
+      
     - name: login
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
